--- a/Grid layout/grid.css
+++ b/Grid layout/grid.css
@@ -17,7 +17,7 @@
 .row
 {
   display: grid;
-  grid-template-columns: repeat(auto-fit,250px);
+  grid-template-columns: repeat(3,250px);
   gap: 20px;
 }
 
@@ -43,7 +43,7 @@
     .row
     {
         display: grid;
-        grid-template-columns:repeat(auto-fit,150px);
+        grid-template-columns:repeat(2,150px);
     }
 
     .image
